[IMP] Disable zooming to fix changing orientation bug in iOS [IMP] Simpler ARGU_API_URL to fix viewing items on mobile during dev [REFACTOR] Renamed 'flex' to 'grid' in Container [IMP] Use EventListItem in Dashboard [FEATURE] Timeline open & close buttons in event view [FEATURE] Clickable widget headers

--- a/app/components/Container/Container.scss
+++ b/app/components/Container/Container.scss
@@ -18,7 +18,7 @@
     min-height: 60vh;
   }
 
-  &--flex {
+  &--grid {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
