--- a/app/components/Widget/Widget.scss
+++ b/app/components/Widget/Widget.scss
@@ -2,4 +2,22 @@
 
 .Widget {
   margin: units('medium');
+
+  > .Heading {
+    font-weight: bold;
+
+    a:hover .Widget__chevron {
+      transform: translateX(3px);
+    }
+  }
+
+  &__chevron {
+    font-size: .7em;
+    opacity: .5;
+    transition: .1s transform;
+  }
+
+  &__description {
+    color: color('grey', 'mid-dark');
+  }
 }
